# temporal-trivia-ui

./: README.md  app.py  client.py  pyproject.toml  workflow.py
templates/: base.html  create.html  end.html  index.html  join.html  lobby.html  login.html  play.html  results.html  scores.html  start.html
yaml/certificates/: certificate.yaml
yaml/deployments/: ui-deployment.yaml
yaml/ingress/: ingressroute.yaml  ingressroute_http.yaml
yaml/services/: ui-service.yaml
